栈，队列, JVM